--- a/projects/angular/src/data/datagrid/_datagrid.clarity.scss
+++ b/projects/angular/src/data/datagrid/_datagrid.clarity.scss
@@ -114,7 +114,7 @@
     -ms-overflow-style: -ms-autohiding-scrollbar;
     overflow: auto;
     flex: 1 1 auto;
-    margin-top: tokens.$cds-global-space-6;
+    margin-top: density.$clr-base-vertical-offset-l;
 
     &.cdk-virtual-scrollable .datagrid-rows {
       flex-grow: 0;
@@ -319,7 +319,7 @@
   }
 
   .datagrid-action-bar {
-    margin-top: tokens.$cds-global-space-9;
+    margin-top: density.$clr-base-vertical-offset-2xl;
 
     // This changes the height and position of the datagrid-spinner when there is an action-bar
     // Allows us to cover the action-bar with the spinner backgdrop and prevent user interactions.
