feat(grid-layout): apply density tokens

--- a/projects/demo/src/app/_utils/clarity-variables.scss
+++ b/projects/demo/src/app/_utils/clarity-variables.scss
@@ -6,3 +6,4 @@
  */
 @import '../../../../angular/src/utils/variables/variables.color';
 @import '../../../../angular/src/utils/variables/variables.global';
+@import '../../../../angular/src/utils/variables/variables.density';
