--- a/projects/angular/src/utils/variables/_properties.layout.scss
+++ b/projects/angular/src/utils/variables/_properties.layout.scss
@@ -6,11 +6,11 @@
  */
 
 @use '../mixins';
-@use '@cds/core/tokens/tokens.scss';
+@use '../../utils/variables/variables.density' as density;
 
 @include mixins.exports('layout.properties') {
   :root [cds-theme] {
-    --clr-grid-gutter-width: #{tokens.$cds-global-space-9};
+    --clr-grid-gutter-width: #{density.$clr-base-horizontal-offset-2xl};
     --clr-grid-container-padding: calc(var(--clr-grid-gutter-width) * 0.5);
     --clr-grid-column-padding: calc(var(--clr-grid-gutter-width) * 0.5);
     --clr-grid-row-margin: calc(var(--clr-grid-gutter-width) * -0.5);
