--- a/projects/angular/src/typography/_lists.scss
+++ b/projects/angular/src/typography/_lists.scss
@@ -9,6 +9,8 @@
 @use '@cds/core/tokens/tokens.scss';
 
 @include mixins.exports('lists.clarity') {
+  $left-margin: calc(tokens.$cds-global-space-6 + variables.$clr-base-horizontal-offset-2xs);
+
   %kill-list-styles {
     padding-left: 0;
     margin-left: 0;
@@ -36,7 +38,7 @@
   ul.list:not([cds-list]),
   ol.list:not([cds-list]) {
     list-style-position: outside;
-    margin-left: tokens.$cds-global-space-6;
+    margin-left: $left-margin;
 
     &.compact {
       & > li {
@@ -51,7 +53,7 @@
   ul:not(.list-unstyled):not([cds-list]),
   ol:not([cds-list]) {
     & > li > ul.list-unstyled {
-      margin-left: tokens.$cds-global-space-6;
+      margin-left: $left-margin;
     }
   }
 
@@ -61,7 +63,7 @@
 
   li > ul:not([cds-list]) {
     margin-top: 0;
-    margin-left: tokens.$cds-global-space-6;
+    margin-left: $left-margin;
   }
 
   ul.list-group:not([cds-list]) {
@@ -71,7 +73,7 @@
   ul:not([cds-list]),
   ol:not([cds-list]) {
     &.list-spacer {
-      margin-top: tokens.$cds-global-space-9;
+      margin-top: variables.$clr-base-vertical-offset-2xl;
     }
   }
 }
