fix(button-group): apply density tokens to outside margins (#1929)
## PR Checklist

Please check if your PR fulfills the following requirements:

- [ ] Tests for the changes have been added (for bug fixes / features)
- [ ] Docs have been added / updated (for bug fixes / features)
- [ ] If applicable, have a visual design approval

## PR Type

What kind of change does this PR introduce?

- [x] Bugfix
- [ ] Feature
- [ ] Code style update (formatting, local variables)
- [ ] Refactoring (no functional changes, no api changes)
- [ ] Build related changes
- [ ] CI related changes
- [ ] Documentation content changes
- [ ] Other... Please describe:

## What is the current behavior?

Issue Number: N/A

## What is the new behavior?

## Does this PR introduce a breaking change?

- [ ] Yes
- [x] No

## Other information

---------

Co-authored-by: Valentin Mladenov <mvalentin@vmware.com>
Co-authored-by: GitHub <noreply@github.com>

--- a/projects/angular/src/button/button-group/_button-group.clarity.scss
+++ b/projects/angular/src/button/button-group/_button-group.clarity.scss
@@ -7,7 +7,6 @@
 @use '../../utils/mixins';
 @use '../variables.buttons' as buttons-variables;
 @use '../../utils/variables/variables.density' as density;
-@use '@cds/core/tokens/tokens.scss';
 
 @mixin square-off-btngroup-btns($dir: left) {
   border-top-#{$dir}-radius: 0;
@@ -17,7 +16,7 @@
 @include mixins.exports('button-group.clarity') {
   .btn-group {
     display: inline-flex;
-    margin-right: tokens.$cds-global-space-6;
+    margin-right: buttons-variables.$clr-btn-horizontal-margin;
 
     clr-dropdown {
       .dropdown-toggle {
