--- a/projects/angular/src/utils/_mixins.scss
+++ b/projects/angular/src/utils/_mixins.scss
@@ -365,6 +365,13 @@ $typography-tokens: (
     line-height: #{density.$clr-base-typography-line-height-16},
     letter-spacing: #{baselinePx(0.2)},
   ),
+  'CAPTION-LG-11-CPT': (
+    // P6, Small Headers
+    font-size: #{density.$clr-base-typography-font-size-caption},
+    font-weight: #{tokens.$cds-alias-typography-caption-font-weight},
+    line-height: #{density.$clr-base-typography-line-height-12},
+    letter-spacing: #{baselinePx(-0.2)},
+  ),
   'ColumnHeader-11-SB-CPT': (
     font-size: #{density.$clr-base-typography-font-size-caption},
     font-weight: #{tokens.$cds-alias-typography-font-weight-semibold},
