--- a/projects/angular/src/utils/variables/_variables.typography.scss
+++ b/projects/angular/src/utils/variables/_variables.typography.scss
@@ -130,7 +130,7 @@ $clr-p5-letter-spacing: var(--clr-p5-letter-spacing) !default;
 $clr-p5-line-height: var(--clr-p5-line-height) !default;
 
 //P6 - card link btns, form_subtext, table_header
-//'CAPTION-LG-11'
+//'CAPTION-LG-11-STD'
 $clr-p6-color: var(--clr-p6-color) !default;
 $clr-p6-font-weight: var(--clr-p6-font-weight) !default;
 $clr-p6-font-size: var(--clr-p6-font-size) !default;
