--- a/projects/angular/src/emphasis/alert/_alert.clarity.scss
+++ b/projects/angular/src/emphasis/alert/_alert.clarity.scss
@@ -419,7 +419,7 @@
           > span,
           .alert-actions,
           .alert-text {
-            @include mixins.generate-typography-token('CAPTION-LG-11');
+            @include mixins.generate-typography-token('CAPTION-LG-11-STD');
           }
 
           .alert-icon-wrapper {
