--- a/projects/angular/src/utils/_mixins.scss
+++ b/projects/angular/src/utils/_mixins.scss
@@ -358,7 +358,7 @@ $typography-tokens: (
     line-height: #{density.$clr-base-typography-line-height-16},
     letter-spacing: #{baselinePx(-0.1)},
   ),
-  'CAPTION-LG-11': (
+  'CAPTION-LG-11-STD': (
     // P6, Small Headers
     font-size: #{density.$clr-base-typography-font-size-caption},
     font-weight: #{tokens.$cds-alias-typography-caption-font-weight},
