fix(alert): adjust app-level compact height

--- a/projects/angular/src/emphasis/alert/_alert.clarity.scss
+++ b/projects/angular/src/emphasis/alert/_alert.clarity.scss
@@ -296,6 +296,7 @@
     border: none;
     border-radius: 0;
     overflow-y: auto;
+    min-height: alert-variables.$clr-alert-min-height;
     padding: density.$clr-base-vertical-offset-s density.$clr-base-horizontal-offset-m;
 
     .alert-actions {
