--- a/projects/angular/src/utils/variables/_variables.density.scss
+++ b/projects/angular/src/utils/variables/_variables.density.scss
@@ -62,6 +62,9 @@ $clr-base-row-height-s: var(--clr-base-row-height-s);
 $clr-base-row-height-m: var(--clr-base-row-height-m);
 $clr-base-row-height-l: var(--clr-base-row-height-l);
 $clr-base-row-height-20: var(--clr-base-row-height-20);
+$clr-base-app-level-alert-row-height: var(
+  --clr-base-app-level-alert-row-height
+); // Will be replaced with row-height-l in v18
 $clr-base-dg-row-height: var(--clr-base-dg-row-height);
 $clr-base-dg-compact-row-height: var(--clr-base-dg-compact-row-height);
 
