--- a/projects/angular/src/data/datagrid/_datagrid.clarity.scss
+++ b/projects/angular/src/data/datagrid/_datagrid.clarity.scss
@@ -114,7 +114,7 @@
     -ms-overflow-style: -ms-autohiding-scrollbar;
     overflow: auto;
     flex: 1 1 auto;
-    margin-top: density.$clr-base-vertical-offset-l;
+    margin-top: datagrid-variables.$clr-datagrid-margin-top;
 
     &.cdk-virtual-scrollable .datagrid-rows {
       flex-grow: 0;
@@ -325,7 +325,7 @@
 
     // This changes the height and position of the datagrid-spinner when there is an action-bar
     // Allows us to cover the action-bar with the spinner backgdrop and prevent user interactions.
-    & ~ .datagrid-spinner {
+    & ~ .datagrid-outer-wrapper .datagrid-spinner {
       height: calc(100% - #{$action-bar-offset});
       top: $action-bar-offset; // Account for the margin above the datagrid-action-bar
     }
@@ -429,7 +429,7 @@
         float: right;
         vertical-align: middle;
         @include mixins.min-equilateral(datagrid-variables.$clr-datagrid-filter-toggle-size);
-        margin-left: tokens.$cds-global-space-4;
+        margin-left: density.$clr-base-horizontal-offset-s;
         background-repeat: no-repeat;
         background-size: contain;
 
@@ -876,8 +876,8 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    top: tokens.$cds-global-space-6;
-    height: calc(100% - #{tokens.$cds-global-space-6}); // Account for the margin above the datagrid-action-bar
+    top: datagrid-variables.$clr-datagrid-margin-top;
+    height: calc(100% - datagrid-variables.$clr-datagrid-margin-top);
     background-color: datagrid-variables.$clr-datagrid-loading-background;
     z-index: map.get(variables.$clr-layers, datagrid-host); // Keeps the spinner above the datagrid header.
   }
