--- a/projects/angular/src/modal/_variables.modal.scss
+++ b/projects/angular/src/modal/_variables.modal.scss
@@ -9,8 +9,9 @@
 @use '../utils/variables/variables.density' as density;
 
 // Usage: ../modal/_modal.clarity.scss
-$clr-modal-default-space: density.$clr-base-horizontal-offset-2xl !default;
-$clr-modal-default-gap: density.$clr-base-vertical-offset-2xl !default;
+$clr-modal-horizontal-space: density.$clr-base-horizontal-offset-2xl !default;
+$clr-modal-vertical-space: density.$clr-base-vertical-offset-2xl !default;
+$clr-modal-vertical-gap: density.$clr-base-gap-xl !default;
 $clr-modal-horizontal-gap: density.$clr-base-gap-s !default;
 $clr-modal-border-radius: var(--clr-modal-border-radius) !default;
 $clr-modal-icon-size: density.$clr-base-icon-size-l !default;
