--- a/projects/angular/src/data/datagrid/_variables.datagrid.scss
+++ b/projects/angular/src/data/datagrid/_variables.datagrid.scss
@@ -8,6 +8,7 @@
 @use '../../progress/spinner/variables.spinner' as spinner-variables;
 @use '../../utils/variables/variables.density' as density;
 @use '@cds/core/tokens/tokens.scss';
+@use '../../utils/variables/variables.density' as density;
 
 // Usage: ../data/datagrid/_datagrid.clarity.scss
 $clr-datagrid-margin-top: density.$clr-base-vertical-offset-l;
