--- a/projects/angular/src/popover/signpost/_signposts.clarity.scss
+++ b/projects/angular/src/popover/signpost/_signposts.clarity.scss
@@ -381,8 +381,12 @@
   }
 
   .signpost-wrap {
+    // bottom padding difference split between `wrap` and `content-body` because of #1503 (CDE-2225)
+    // Wrap have (offset-xl - 1px), Body have 1px;
+    $wrap-bottom-padding: calc(density.$clr-base-vertical-offset-xl - tokens.$cds-global-space-1);
+
     gap: density.$clr-base-gap-s;
-    padding: density.$clr-base-vertical-offset-xl density.$clr-base-horizontal-offset-xl;
+    padding: density.$clr-base-vertical-offset-xl density.$clr-base-horizontal-offset-xl $wrap-bottom-padding;
     border: tokens.$cds-alias-object-border-width-100 solid signpost-variables.$clr-signpost-content-border-color;
     border-radius: signpost-variables.$clr-signpost-border-radius;
     background-color: signpost-variables.$clr-signpost-content-bg-color;
@@ -393,11 +397,12 @@
   }
 
   .signpost-content-body {
+    padding-bottom: tokens.$cds-global-space-1;
     color: signpost-variables.$clr-signpost-content-color;
     text-align: left;
     max-height: mixins.baselinePx(450);
     overflow-y: auto;
 
-    @include mixins.generate-typography-token('SECONDARY-13-RG-CPT');
+    @include mixins.generate-typography-token('BODY-14-RG-CPT');
   }
 }
